deployments/basketdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basketdb
  labels:
    app: basketdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basketdb
  template:
    metadata:
      labels:
        app: basketdb
    spec:
      containers:
      - name: basketdb
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: basketdb-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres-data
      volumes:
      - name: basketdb-storage
        persistentVolumeClaim:
          claimName: basketdb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: basketdb
spec:
  selector:
    app: basketdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
