deployments/catalog-read-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-read-db
  labels:
    app: catalog-read-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-read-db
  template:
    metadata:
      labels:
        app: catalog-read-db
    spec:
      containers:
      - name: catalog-read-db
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: catalog-read-db-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres-data
      volumes:
      - name: catalog-read-db-storage
        persistentVolumeClaim:
          claimName: catalog-read-db-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: catalog-read-db
spec:
  selector:
    app: catalog-read-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
