deployments/catalog-write-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-write-db
  labels:
    app: catalog-write-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-write-db
  template:
    metadata:
      labels:
        app: catalog-write-db
    spec:
      containers:
      - name: catalog-write-db
        image: mcr.microsoft.com/mssql/server
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: catalog-write-db-storage
          mountPath: /var/opt/mssql
          subPath: postgres-data
      volumes:
      - name: catalog-write-db-storage
        persistentVolumeClaim:
          claimName: catalog-write-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: catalog-write-db
spec:
  selector:
    app: catalog-write-db
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
