deployments/customerdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customerdb
  labels:
    app: customerdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customerdb
  template:
    metadata:
      labels:
        app: customerdb
    spec:
      containers:
      - name: customerdb
        image: mcr.microsoft.com/mssql/server
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: customerdb-storage
          mountPath: /var/opt/mssql
          subPath: postgres-data
      volumes:
      - name: customerdb-storage
        persistentVolumeClaim:
          claimName: customerdb-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: customerdb
spec:
  selector:
    app: customerdb
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
