deployments/discount-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-grpc
  labels:
    app: discount-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-grpc
  template:
    metadata:
      labels:
        app: discount-grpc
    spec:
      containers:
      - name: discount-grpc
        image: gknikolic/discountgrpc:1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: discount-grpc
spec:
  selector:
    app: discount-grpc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
