deployments/inventorydb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventorydb
  labels:
    app: inventorydb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventorydb
  template:
    metadata:
      labels:
        app: inventorydb
    spec:
      containers:
      - name: inventorydb
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: inventorydb-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres-data
      volumes:
      - name: inventorydb-storage
        persistentVolumeClaim:
          claimName: inventorydb-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: inventorydb
spec:
  selector:
    app: inventorydb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
