deployments/orderdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderdb
  labels:
    app: orderdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderdb
  template:
    metadata:
      labels:
        app: orderdb
    spec:
      containers:
      - name: orderdb
        image: mcr.microsoft.com/mssql/server
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: orderdb-storage
          mountPath: /var/opt/mssql
          subPath: postgres-data
      volumes:
      - name: orderdb-storage
        persistentVolumeClaim:
          claimName: orderdb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: orderdb
spec:
  selector:
    app: orderdb
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
