deployments/shopping-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-web
  labels:
    app: shopping-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-web
  template:
    metadata:
      labels:
        app: shopping-web
    spec:
      containers:
      - name: shopping-web
        image: gknikolic/shopingweb:1.0.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: wwwroot-storage
          mountPath: /app/wwwroot
      volumes:
      - name: wwwroot-storage
        persistentVolumeClaim:
          claimName: shopping-web-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: shopping-web
spec:
  selector:
    app: shopping-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
