deployments/yarpapigateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarpapigateway
  labels:
    app: yarpapigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yarpapigateway
  template:
    metadata:
      labels:
        app: yarpapigateway
    spec:
      containers:
      - name: yarpapigateway
        image: gknikolic/yarpapigateway:1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: yarpapigateway
spec:
  selector:
    app: yarpapigateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
